# dasVideo

./: .das_module  .das_package  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  EMMA.md  ORIGINAL_PLAN.md  README.md  ROADMAP.md
.github/workflows/: docs.yml  tests.yml
assets/emma/: emma_intro.mpg
cmake/: BuildDav1d.cmake  BuildWebm.cmake  dav1d_config.h.in
doc/source/: conf.py  index.rst  reference.rst  usage.rst
doc/source/_templates/: layout.html
doc/source/tutorials/: 01_open_probe.rst  02_decode_rgba.rst  03_rgba_gl.rst  04_yuv_shader.rst  05_audio_sync.rst  06_webm.rst  07_texture_cube.rst  index.rst
examples/: play_audio_gl.das  play_rgba_gl.das  play_texture_cube_gl.das  play_yuv_gl.das  texture_cube_scene.das
src/: dasVIDEO.cpp
tests/: test_audio.das  test_av1.das  test_membuf.das  test_video.das  test_webm.das
tests/fixtures/: test.webm  test_av1.ivf
tutorials/01_open_probe/: open_probe_tut.das  test_open_probe.das
tutorials/02_decode_rgba/: decode_rgba_tut.das  test_decode_rgba.das
tutorials/03_rgba_gl/: narration.mpg
tutorials/04_yuv_shader/: narration.mpg  sample.mpg  test_yuv_planes.das
tutorials/05_audio_sync/: sample.mpg  test_audio_decode.das
tutorials/06_webm/: sample.webm  test_webm_decode.das  webm_tut.das
tutorials/07_texture_cube/: test_texture_cube.das
tutorials/07_texture_cube/recording/: record_texture_cube.das
tutorials/recording/: tutorial_record.das  tutorial_record_voiced.das
